fixed alignment for main panel, and minor tweaks to background

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,8 +16,10 @@ code {
 }
 
 .main-panel {
-  margin: 200px 200px 200px 200px;
-  background-color: rgba(4, 161, 70, 0.2);
+  margin: 9% 0 0 0; 
+  align-content: center;
+  padding: 10% 10% 10% 10%;
+  background-color: rgba(4, 24, 72, 0.2);
   color: seashell;
   border-color: ;
   border: 20px;
